# Agent

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: mvp.yml
apps/agent-gateway/: pyproject.toml
apps/agent-gateway/src/agent_gateway/: __init__.py  main.py
apps/agent-gateway/src/agent_gateway/conf/: agents.dev.yaml  default.yaml
apps/agent-server/: pyproject.toml
apps/agent-server/src/agent_server/: __init__.py  main.py
apps/agent-server/src/agent_server/conf/: default.yaml
apps/agents/demo-business-agent/: pyproject.toml
apps/agents/demo-business-agent/src/demo_business_agent/: __init__.py  main.py
apps/agents/demo-business-agent/src/demo_business_agent/conf/: default.yaml
apps/agents/master-agent/: pyproject.toml
apps/agents/master-agent/src/master_agent/: __init__.py  main.py
apps/agents/master-agent/src/master_agent/conf/: default.yaml
docs/adr/: 0001-use-a2a-for-agent-communication.md  0002-use-ag-ui-for-frontend-events.md  0003-use-redis-cluster-for-realtime-coordination.md  0004-use-master-agent-for-routing.md  0005-use-component-descriptor-for-ui.md
docs/architecture/: mvp-scope.md  mvp-verification.md  overview.md  protocol-boundaries.md  real-mvp-design.md  redis-design.md  runtime-flows.md
scripts/: dev_services.py  smoke_backend.py  verify_all.py  verify_mvp.py
tests/: test_a2a_cards.py  test_agent_core_stores.py  test_agent_gateway.py  test_agent_server_auth.py  test_agent_server_files.py  test_auth.py  test_cancel_events.py  test_ci_workflow.py  test_config.py  test_demo_business_agent_model.py  test_dev_services.py  test_fastapi_lifespan.py  test_files.py  test_llm.py  test_logging.py  test_master_agent_delivery.py  test_master_agent_routing.py  test_real_mvp_design.py  test_redis_stores.py  test_server.py  test_ui_contracts.py  test_verify_all.py  test_verify_mvp.py
web/: index.html  package.json
web/src/: App.vue  env.d.ts
web/src/runtime/: events.test.ts  events.ts
