[project]
name = "agent-gateway"
version = "0.1.0"
description = "Thin A2A routing gateway."
requires-python = ">=3.11"
dependencies = [
  "agent-core",
  "fastapi>=0.110",
  "hypercorn>=0.16",
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.scripts]
agent-gateway = "agent_gateway.main:main"

[tool.uv.sources]
agent-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
