[project]
name = "demo-business-agent"
version = "0.1.0"
description = "Demo business agent for protocol validation."
requires-python = ">=3.11"
dependencies = [
  "agent-core",
  "fastapi>=0.110",
  "fasta2a",
  "hypercorn>=0.16",
  "pydantic-ai",
]

[project.scripts]
demo-business-agent = "demo_business_agent.main:main"

[tool.uv.sources]
agent-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_business_agent"]
