[project]
name = "demo-business-agent"
version = "0.1.0"
description = "Demo business agent for protocol validation."
requires-python = ">=3.11"
dependencies = [
  "agent-core",
  "fastapi>=0.110",
  "fasta2a",
  "hypercorn>=0.16",
  "pydantic-ai",
]

[project.scripts]
demo-business-agent = "demo_business_agent.main:main"

[tool.uv.sources]
agent-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
