[project]
name = "master-agent"
version = "0.1.0"
description = "Master routing and orchestration agent."
requires-python = ">=3.11"
dependencies = [
  "agent-core",
  "fastapi>=0.110",
  "fasta2a",
  "hypercorn>=0.16",
  "httpx>=0.27",
  "pydantic-ai",
]

[project.scripts]
master-agent = "master_agent.main:main"

[tool.uv.sources]
agent-core = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
